[package]
name = "snatch"
version = "0.1.2"
authors = ["Antonin Carette <antonin@derniercri.io>", "Jean-Serge Monbailly <jean-serge@derniercri.io>"]
description = "A simple and fast download accelerator"
repository = "https://github.com/derniercri/snatch"
license = "MIT"

[lib]
name = "libsnatch"
path = "src/lib.rs"

[[bin]]
name = "snatch"
path = "src/main.rs"

[dependencies]
ansi_term = "0.9.0"
clap = "2.20.0"
hyper = "0.9"
pbr = "1.0.0"
num_cpus = "1.0"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
panic = 'unwind'

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
panic = 'unwind'
